grammar.js
    toplevel: $ => seq($._toplevel, repeat($._toplevel)),
    _toplevel: $ => choice($.operation, $.attribute_alias_def, $.type_alias_def),

    // Common syntax (lang-ref)
    //  digit     ::= [0-9]
    //  hex_digit ::= [0-9a-fA-F]
    //  letter    ::= [a-zA-Z]
    //  id-punct  ::= [$._-]
    //
    //  integer-literal ::= decimal-literal | hexadecimal-literal
    //  decimal-literal ::= digit+
    //  hexadecimal-literal ::= `0x` hex_digit+
    //  float-literal ::= [-+]?[0-9]+[.][0-9]*([eE][-+]?[0-9]+)?
    //  string-literal  ::= `"` [^"\n\f\v\r]* `"`   TODO: define escaping rules
    //
    string_literal: $ => token(seq('"', repeat(/[^\\"\n\f\v\r]+/), '"')),
    literal: $ => choice($.integer_literal, $.float_literal, $.string_literal, $.bool_literal,
      $.tensor_literal, $.complex_literal, $.unit_literal),

    bare_id: $ => token(seq(/[a-zA-Z_]/, repeat(/[a-zA-Z0-9_$.]/))),
    _alias_or_dialect_id: $ => token(seq(/[a-zA-Z_]/, repeat(/[a-zA-Z0-9_$]/))),
    value_use: $ => seq('%', $._suffix_id),
    _suffix_id: $ => token(choice(repeat1(/[0-9]/), seq(/[a-zA-Z_$.]/, repeat(/[a-zA-Z0-9_$.]/)))),
    symbol_ref_id: $ => seq('@', choice($._suffix_id, $.string_literal),
      optional(seq('::', $.symbol_ref_id))),
    value_use_list: $ => seq($.value_use, repeat(seq(',', $.value_use))),

    // Operations
    //   operation            ::= op-result-list? (generic-operation |
    //                            custom-operation)
    //                            trailing-location?
    //   generic-operation    ::= string-literal `(` value-use-list? `)`
    //   successor-list?
    //                            region-list? dictionary-attribute? `:`
    //                            function-type
    //   custom-operation     ::= bare-id custom-operation-format
    //   op-result-list       ::= op-result (`,` op-result)* `=`
    //   op-result            ::= value-id (`:` integer-literal)
    //   successor-list       ::= `[` successor (`,` successor)* `]`
    //   successor            ::= caret-id (`:` bb-arg-list)?
    //   region-list          ::= `(` region (`,` region)* `)`
    //   dictionary-attribute ::= `{` (attribute-entry (`,` attribute-entry)*)?
    //                            `}`
    //   trailing-location    ::= (`loc` `(` location `)`)?
    operation: $ => seq(
      field('lhs', optional($.op_result_list)),
      field('rhs', choice($.generic_operation, $.custom_operation)),
      field('location', optional($.trailing_location))),
    generic_operation: $ =>
      seq($.string_literal, '(', optional($.value_use_list),
        ')', optional($.successor_list),
        optional($.region_list),
        optional($.attribute), ':',
        $.function_type),
    // custom-operation rule is defined later in the grammar, post the generic.
    op_result_list: $ => seq($.op_result, repeat(seq(',', $.op_result)), '='),
    op_result: $ => seq($.value_use, optional(seq(':', $.integer_literal))),
    region_list: $ => seq('(', $.region, repeat(seq(',', $.region)), ')'),
    dictionary_attribute: $ => seq('{', optional($.attribute_entry),
      repeat(seq(',', $.attribute_entry)), '}'),
    _value_use_type_list: $ => seq($.value_use_list, ':', $._type_list_no_parens),

    // Regions
    //   region      ::= `{` entry-block? block* `}`
    //   entry-block ::= operation+
    region: $ => seq('{', optional($.entry_block), repeat($.block), '}'),
    entry_block: $ => repeat1($.operation),

    // Types
    //   type ::= type-alias | dialect-type | builtin-type
    //
    //   type-list-no-parens ::=  type (`,` type)*
    //   type-list-parens ::= `(` type-list-no-parens? `)`
    //
    //   // This is a common way to refer to a value with a specified type.
    //   ssa-use-and-type ::= ssa-use `:` type
    //   ssa-use ::= value-use
    //
    //   // Non-empty list of names and types.
    //   ssa-use-and-type-list ::= ssa-use-and-type (`,` ssa-use-and-type)*
    //
    //   function-type ::= (type | type-list-parens) `->` (type |
    //   type-list-parens)
    type: $ => choice($.type_alias, $.dialect_type, $.builtin_type),
    _type_list_no_parens: $ => seq($.type, repeat(seq(',', $.type))),
    type_list_parens: $ => seq('(', optional($._type_list_no_parens), ')'),
    function_type: $ => seq(choice($.type, $.type_list_parens), $._function_return),
    _function_return: $ => seq('->', choice($.type, $.type_list_parens)),

    // Type aliases
    //   type-alias-def ::= '!' alias-name '=' type
    //   type-alias ::= '!' alias-name
    dialect_type: $ => seq(
      '!', choice($.opaque_dialect_item, $.pretty_dialect_item)),
    dialect_namespace: $ => $._alias_or_dialect_id,
    dialect_ident: $ => $._alias_or_dialect_id,
    pretty_dialect_item: $ => seq($.dialect_namespace, '.', $.dialect_ident,
      optional($.pretty_dialect_item_body)),
    builtin_type: $ => choice(
      // TODO: Add opaque_type, function_type
      $.integer_type,
      $.float_type,
      $.complex_type,
      $.index_type,
      $.memref_type,
      $.none_type,
      $.tensor_type,
      $.vector_type,
      $.tuple_type),

    // signed-integer-type ::= `si`[1-9][0-9]*
    // unsigned-integer-type ::= `ui`[1-9][0-9]*
    // signless-integer-type ::= `i`[1-9][0-9]*
    // integer-type ::= signed-integer-type | unsigned-integer-type | signless-integer-type
    integer_type: $ => token(seq(choice('si', 'ui', 'i'), /[1-9]/, repeat(/[0-9]/))),
    attribute_entry: $ => seq(choice($.bare_id, $.string_literal),
      optional(seq('=', $.attribute_value))),
    custom_operation: $ => choice(
      $.builtin_dialect,
      $.func_dialect,
      $.llvm_dialect,
      $.cf_dialect,
      $.arith_dialect,
      $.scf_dialect,
      $.memref_dialect,
      $.tensor_dialect,
      $.linalg_dialect
    ),

    builtin_dialect: $ => prec.left(choice(
      // operation ::= `builtin.module` ($sym_name^)? attr-dict-with-keyword $bodyRegion
      seq('module',
        field('name', optional($.bare_id)),
        field('attributes', optional($.attribute)),
        field('body', $.region)),

      // operation ::= `builtin.unrealized_conversion_cast` ($inputs^ `:` type($inputs))?
      //                `to` type($outputs) attr-dict
      seq('unrealized_cast_conversion',
        field('inputs', $._value_use_type_list), 'to',
        field('outputs', $._type_list_no_parens),
        field('attributes', optional($.attribute)))
    )),

    func_dialect: $ => prec.right(choice(
      seq('func.func', $._op_func),

      seq(choice('func.return', 'return'),
        field('attributes', optional($.attribute)),
        field('results', optional($._value_use_type_list)))
    )),

    func_return: $ => seq('->', $.type_list_attr_parens),
    func_arg_list: $ => seq('(', optional(choice($.variadic,
      $._value_id_and_type_attr_list)), ')'),
    _value_id_and_type_attr_list: $ => seq($._value_id_and_type_attr,
      repeat(seq(',', $._value_id_and_type_attr)), optional(seq(',', $.variadic))),
    type_list_attr_parens: $ => choice($.type, seq('(', $.type, optional($.attribute),
      repeat(seq(',', $.type, optional($.attribute))), ')')),
    variadic: $ => '...',

    // (func.func|llvm.func) takes arguments, an optional return type, and and optional body
    _op_func: $ => seq(
      field('name', $.symbol_ref_id),
      field('arguments', $.func_arg_list),
      field('return', optional($.func_return)),
      field('attributes', optional(seq(token('attributes'), $.attribute))),
      field('body', optional($.region))),

    llvm_dialect: $ => prec.right(choice(
      seq('llvm.func', $._op_func),

      seq('llvm.return',
        field('attributes', optional($.attribute)),
        field('results', optional($._value_use_type_list))))),

    arith_dialect: $ => choice(
      // operation ::= `arith.constant` attr-dict $value
      seq('arith.constant',
        field('attributes', optional($.attribute)),
        field('value', $._literal_and_type)),

      // operation ::= `arith.addi` $lhs `,` $rhs attr-dict `:` type($result)
      // operation ::= `arith.subi` $lhs `,` $rhs attr-dict `:` type($result)
      // operation ::= `arith.divsi` $lhs `,` $rhs attr-dict `:` type($result)
      // operation ::= `arith.divui` $lhs `,` $rhs attr-dict `:` type($result)
      // operation ::= `arith.ceildivsi` $lhs `,` $rhs attr-dict `:` type($result)
      // operation ::= `arith.ceildivui` $lhs `,` $rhs attr-dict `:` type($result)
      // operation ::= `arith.floordivsi` $lhs `,` $rhs attr-dict `:` type($result)
      // operation ::= `arith.remsi` $lhs `,` $rhs attr-dict `:` type($result)
      // operation ::= `arith.remui` $lhs `,` $rhs attr-dict `:` type($result)
      // operation ::= `arith.muli` $lhs `,` $rhs attr-dict `:` type($result)
      // operation ::= `arith.mulsi_extended` $lhs `,` $rhs attr-dict `:` type($lhs)
      // operation ::= `arith.andi` $lhs `,` $rhs attr-dict `:` type($result)
      // operation ::= `arith.ori` $lhs `,` $rhs attr-dict `:` type($result)
      // operation ::= `arith.xori` $lhs `,` $rhs attr-dict `:` type($result)
      // operation ::= `arith.maxsi` $lhs `,` $rhs attr-dict `:` type($result)
      // operation ::= `arith.maxui` $lhs `,` $rhs attr-dict `:` type($result)
      // operation ::= `arith.minsi` $lhs `,` $rhs attr-dict `:` type($result)
      // operation ::= `arith.minui` $lhs `,` $rhs attr-dict `:` type($result)
      // operation ::= `arith.shli` $lhs `,` $rhs attr-dict `:` type($result)
      // operation ::= `arith.shrsi` $lhs `,` $rhs attr-dict `:` type($result)
      // operation ::= `arith.shrui` $lhs `,` $rhs attr-dict `:` type($result)
      seq(choice('arith.addi', 'arith.subi', 'arith.divsi', 'arith.divui',
        'arith.ceildivsi', 'arith.ceildivui', 'arith.floordivsi',
        'arith.remsi', 'arith.remui', 'arith.muli', 'arith.mulsi_extended',
        'arith.andi', 'arith.ori', 'arith.xori',
        'arith.maxsi', 'arith.maxui', 'arith.minsi', 'arith.minui',
        'arith.shli', 'arith.shrsi', 'arith.shrui'),
        field('lhs', $.value_use), ',',
        field('rhs', $.value_use),
        field('attributes', optional($.attribute)), ':',
        $.type),

      // operation ::= `arith.addui_extended` $lhs `,` $rhs attr-dict `:` type($sum)
      //                `,` type($overflow)
      seq('arith.addui_extended',
        field('lhs', $.value_use), ',',
        field('rhs', $.value_use),
        field('attributes', optional($.attribute)),
        ':', $.type, ',', $.type),

      // operation ::= `arith.addf` $lhs `,` $rhs (`fastmath` `` $fastmath^)?
      //                attr-dict `:` type($result)
      // operation ::= `arith.divf` $lhs `,` $rhs (`fastmath` `` $fastmath^)?
      //                attr-dict `:` type($result)
      // operation ::= `arith.maxf` $lhs `,` $rhs (`fastmath` `` $fastmath^)?
      //                attr-dict `:` type($result)
      // operation ::= `arith.minf` $lhs `,` $rhs (`fastmath` `` $fastmath^)?
      //                attr-dict `:` type($result)
      // operation ::= `arith.mulf` $lhs `,` $rhs (`fastmath` `` $fastmath^)?
      //                attr-dict `:` type($result)
      // operation ::= `arith.remf` $lhs `,` $rhs (`fastmath` `` $fastmath^)?
      //                attr-dict `:` type($result)
      // operation ::= `arith.subf` $lhs `,` $rhs (`fastmath` `` $fastmath^)?
      //                attr-dict `:` type($result)
      seq(choice('arith.addf', 'arith.divf', 'arith.maxf', 'arith.minf', 'arith.mulf',
        'arith.remf', 'arith.subf'),
        field('lhs', $.value_use), ',',
        field('rhs', $.value_use),
        field('fastmath', optional($.fastmath_attr)),
        field('attributes', optional($.attribute)), ':',
        $.type),

      // operation ::= `arith.negf` $operand (`fastmath` `` $fastmath^)?
      //                attr-dict `:` type($result)
      seq(choice('arith.negf'),
        field('operand', $.value_use),
        field('fastmath', optional($.fastmath_attr)),
        field('attributes', optional($.attribute)), ':',
        $.type),

      // operation ::= `arith.cmpi` $predicate `,` $lhs `,` $rhs attr-dict `:` type($lhs)
      // operation ::= `arith.cmpf` $predicate `,` $lhs `,` $rhs attr-dict `:` type($lhs)
      seq(choice('arith.cmpi', 'arith.cmpf'),
        field('predicate',
          choice('eq', 'oeq', 'ne', 'slt', 'sle', 'sgt', 'sge', 'ult', 'ule', 'ugt', 'uge')), ',',
        field('lhs', $.value_use), ',',
        field('rhs', $.value_use),
        field('attributes', optional($.attribute)), ':', $.type),

      // operation ::= `arith.extf` $in attr-dict `:` type($in) `to` type($out)
      // operation ::= `arith.extsi` $in attr-dict `:` type($in) `to` type($out)
      // operation ::= `arith.extui` $in attr-dict `:` type($in) `to` type($out)
      // operation ::= `arith.fptosi` $in attr-dict `:` type($in) `to` type($out)
      // operation ::= `arith.fptoui` $in attr-dict `:` type($in) `to` type($out)
      // operation ::= `arith.index_cast` $in attr-dict `:` type($in) `to` type($out)
      // operation ::= `arith.index_castui` $in attr-dict `:` type($in) `to` type($out)
      // operation ::= `arith.sitofp` $in attr-dict `:` type($in) `to` type($out)
      // operation ::= `arith.uitofp` $in attr-dict `:` type($in) `to` type($out)
      // operation ::= `arith.bitcast` $in attr-dict `:` type($in) `to` type($out)
      // operation ::= `arith.truncf` $in attr-dict `:` type($in) `to` type($out)
      seq(choice('arith.extf', 'arith.extsi', 'arith.extui', 'arith.fptosi', 'arith.fptoui',
        'arith.index_cast', 'arith.index_castui', 'arith.sitofp', 'arith.uitofp', 'arith.bitcast',
        'arith.truncf'),
        field('in', $.value_use),
        field('attributes', $.attribute),
        $._from_type_to_type),

      seq('arith.select',
        field('cond', $.value_use), ',',
        field('truebr', $.value_use), ',',
        field('falsebr', $.value_use),
        ':', $._type_list_no_parens)
    ),

    _literal_and_type: $ => seq($.literal, optional(seq(':', $.type))),
    _from_type_to_type: $ => seq(':',
      field('fromtype', $.type), token('to'),
      field('totype', $.type)),
